<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">小米音响</string>

    <string name="dfu_version">3.0.2.ver</string>
    <string name="title_activity_xiaomi_soundbar">固件版本(3.0.2)</string>
    <string name="title_main">固件版本(3.0.2)</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="bind_service">Bind Service</string>
    <string name="begin_update_dfu">IPC Update</string>
    <string name="ipc_begin_update_dfu">Service Update</string>
    <string name="show_log">Show Log</string>
    <string name="fetch_version">Fetch Version Info</string>
    <string name="fetch_subwoofer">Fetch SubWoofer</string>
    <string name="volume_plus">Volume+</string>
    <string name="volume_sub">Volume-</string>
    <string name="action_soundbar">Sound Bar Test</string>
    <string name="source_get">Current Sources</string>
    <string name="source_get_available">Avail Sources</string>
    <string name="source_set_available">Set Source</string>
    <string name="clear_sb_address">Clear SoundBar address</string>
    <string name="close_connection">Close Connection</string>
    <string name="set_volume">Set Volume</string>
    <string name="default_volume">75</string>
    <string name="clear_log">Clear Log</string>




    <string name="title_effection_settings">音效设置</string>
    <string name="title_about">关于</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

    <string name="menu_local">本地更新</string>
    <string name="button_scan">重新查找小米音响</string>
    <string name="button_connect">连接小米音响</string>
    <string name="button_version_check">检查版本</string>
    <string name="button_version_upgrade">升级小米音响</string>

    <string name="splash_title">小米音响</string>
    <string name="connect_title">连接小米音响</string>
    <string name="connect_ok">小米音响连接成功</string>
    <string name="connect_failed">小米音响连接失败</string>
    <string name="title_activity_connect_bar">ConnectBar</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="qa_title">常用问题列表</string>
    <string name="qa_loading">载入数据中</string>
    <string name="qa_loading_failure">读取帮助信息失败</string>
    
    <string name="setting_sound_control">小米音响参数</string>
    <string name="setting_private_mode_title">私人模式</string>
    <string name="setting_private_mode_summary">开启私人模式后，音响无法被其他人争抢配对</string>
    <string name="connect_failure">扫描小米音响失败</string>
    <string name="scan_suc_with_version">扫描到小米音响\n地址:%1$s\n版本号:%2$s</string>
    <string name="portal_upgrade">音响升级</string>
    <string name="portal_help">常见问题</string>
    
    <string name="fb_title">意见反馈</string>
    <string name="fb_suggestion">产品建议</string>
    <string name="fb_bug">程序错误</string>
    <string name="fb_subject">主题</string>
    <string name="fb_msg">请留下您的宝贵意见</string>
    <string name="fb_suggestion_msg">您的宝贵建议，我们将不断改进</string>
    <string name="fb_error_msg">详细错误描述</string>
    <string name="fb_hint_phone">手机号/邮箱</string>
    <string name="fb_mail">邮件</string>
    <string name="fb_submit">提交</string>
    <string name="fb_submit_finish">提交成功</string>
    <string name="fb_tost">请填写xxx</string>
    <string name="fb_log">上传错误日志</string>
    <string name="fb_contact">请填写您的联系方式</string>

    <string name="portal_examine">故障诊断</string>
    <string name="examine_category_title">请选择您遇到的问题</string>
    <string name="examine_loading">正在加载诊断数据...</string>
    <string name="examine_fragment_title">故障诊断</string>

    <string name="feedback">Feedback</string>
    <string name="menu_feedback">Feedback</string>
    <string name="connect_scan_device">正在查找小米音响</string>
    <string name="connect_ok_connecting">找到音响%1$s，正在建立连接</string>
    <string name="connect_ok_query_version">已经连接到%1$s，正在获取软件版本</string>
    <string name="settings_woofer_volume">低音炮音量</string>
    <string name="setting_woofer_setting">基本设置</string>
    <string name="setting_adavanced_setting">高级设置</string>
    <string name="setting_master_reset">重置</string>
    <string name="setting_master_reset_title">恢复出厂设置</string>
    <string name="settings_soundbar_volume">音响音量</string>
    <string name="setting_woofer_connect_tone_title">低音炮连接提示音</string>
    <string name="setting_eq_control_title">音效设置</string>
    <string name="setting_eq_select">选择一个音效</string>
    <string name="examine_check">手动诊断</string>
    <string name="custom_eq_setup">自定义音效</string>
    <string name="upgrade_version_selection_title">选择升级版本</string>
    <string name="upgrade_action">升级</string>
    <string name="connecting_prompt_discovery">正在搜索小米音响</string>
    <string name="connecting_prompt_helper">请确认音响未和其他设备有连接</string>
    <string name="connecting_prompt_failure">未搜索到小米音响，请重试</string>
    <string name="connecting_bt_retry">重新搜索</string>
    <string name="main_entry_eq_title">音效风格</string>
    <string name="main_entry_settings">音响设置</string>
    <string name="main_entry_upgrade">固件升级</string>
    <string name="main_entry_diagnose">故障诊断</string>
    <string name="main_panel_title">小米音响</string>
    <string name="main_panel_eq_style_f">音效模式：%1$s</string>
    <string name="main_panel_woofer_vol">低音强度：</string>
    <string name="input_source_tv">小米电视</string>
    <string name="main_panel_no_woofer">"低音炮未连接,点击重新连接"</string>
    <string name="main_panel_woofer_connecting">正在连接低音炮</string>
    <string name="setting_upgrade_log">升级日志</string>
    <string name="setting_device_name">设备名称</string>
    <string name="setting_device_name_default">小米音响</string>
    <string name="eq_standar">默认</string>
    <string name="eq_movie">看电影</string>
    <string name="eq_tv">看电视</string>
    <string name="eq_pop">流行音乐</string>
    <string name="eq_setting_title">音效风格</string>
    <string name="eq_custom">自定义</string>
    <string name="eq_jazz">爵士乐</string>
    <string name="eq_class">古典音乐</string>
    <string name="eq_rock">摇滚乐</string>
    <string name="main_no_source_alert">没有连接音源</string>
    <string name="main_no_source">在声音输入源连接时，才可以调节音量和音效</string>
    <string name="setting_reset_alert">重置音响将丢失连接记录，更多音效参数和所有设置值，确认要重置?</string>
    <string name="input_source_none">无音源</string>
    <string name="setting_deviceid_title">设备ID</string>
    <string name="main_panel_vol_title">当前总音量</string>
    <string name="main_upgrade_checking">正在检查固件</string>
    <string name="main_upgrade_result_ok">升级成功</string>
    <string name="main_upgrade_result_ok_info">等待%1$s秒后音响将自动重启</string>
    <string name="main_upgrade_result_failed">升级失败</string>
    <string name="main_upgrade_result_failure_info">请稍后重试</string>
    <string name="diagnosis_fix_confirm">以上操作是否解决了您的问题?</string>
    <string name="diagnosis_fixed">已经解决</string>
    <string name="diagnosis_next_fix">没有，尝试其他解决方式</string>
    <string name="main_upgrade_downlad">正在下载固件</string>
    <string name="main_upgrade_upload">正在写入固件</string>
    <string name="main_upgrade_ongoing">正在升级固件</string>

</resources>
