<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SoundBarActivity" >

    
    <CheckBox android:id="@+id/check_showlog"        
        android:layout_below="@id/update_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_log"/>
    
    <Button
        android:id="@+id/bind_sb_service"
        android:layout_below="@id/check_showlog" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bind_service" />
    
    <Button
        android:id="@+id/button_volume_add"        
        android:layout_below="@id/check_showlog"
        android:layout_toRightOf="@id/bind_sb_service" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volume_plus" />
    
    <Button
        android:id="@+id/buttong_volume_sub"
        android:layout_below="@id/check_showlog"
        android:layout_toRightOf="@id/button_volume_add" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volume_sub" />
    
    <Button
        android:id="@+id/buttong_set_volume"
        android:layout_below="@id/check_showlog"
        android:layout_toRightOf="@id/buttong_volume_sub" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_volume" />
    
    <EditText 
        android:id="@+id/edit_volume_value"
        android:layout_below="@id/check_showlog"        
        android:layout_toRightOf="@id/buttong_set_volume"  
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_volume"
        android:inputType="number"/>    
    
    <Button
        android:id="@+id/button_source_get"
        android:layout_below="@id/bind_sb_service"
        android:layout_toRightOf="@id/start_bind_service" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/source_get" />
    
    <Button
        android:id="@+id/buttong_source_avail"
        android:layout_below="@id/bind_sb_service"
        android:layout_toRightOf="@id/button_source_get" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/source_get_available" />
    
    <Button
        android:id="@+id/buttong_set_source"
        android:layout_below="@id/bind_sb_service"
        android:layout_toRightOf="@id/buttong_source_avail" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/source_set_available" />
    
    
    <Button
        android:id="@+id/button_clear_address"
        android:layout_below="@id/button_source_get"        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_sb_address" />
    
    <Button
        android:id="@+id/button_close_connection"
        android:layout_below="@id/button_clear_address"        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_connection" />
    
    <Button
        android:id="@+id/button_clear_log"
        android:layout_below="@id/button_clear_address"    
        android:layout_toRightOf="@id/button_close_connection"    
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_log" />
    
     <Button
        android:id="@+id/button_fetch_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_clear_log"
        android:text="@string/fetch_version" />
     
     <Button
        android:id="@+id/button_fetch_subwoofer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_clear_log"
        android:layout_toRightOf="@id/button_fetch_version"    
        android:text="@string/fetch_subwoofer" />
     
      <Button
        android:id="@+id/button_fetch_subwoofer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_clear_log"
        android:layout_toRightOf="@id/button_fetch_version"    
        android:text="@string/fetch_subwoofer" />
     
     
    
    <EditText 
        android:id="@+id/sb_log_service"
        android:layout_below="@id/button_fetch_version" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>
