<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SoundBarDFUUpdateFragment">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

            <LinearLayout
                android:id="@+id/check_soundbar"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:visibility="gone">
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/button_scan_soundbar"
                    android:text="@string/button_scan"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/check_soundbar_connect"
                android:layout_below="@id/check_soundbar"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:visibility="gone">
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/button_connect_soundbar"
                    android:text="@string/button_connect"/>
            </LinearLayout>

          <LinearLayout
            android:id="@+id/check_soundbar_checkversion"
            android:layout_below="@id/check_soundbar_connect"
            android:layout_width="fill_parent"
            android:layout_height="48dp">
            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/button_soundbar_version"
                android:text="@string/button_version_check"/>
          </LinearLayout>

          <TextView
            android:id="@+id/content_hint"
            android:layout_below="@id/check_soundbar_checkversion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"/>

        <TextView
              android:id="@+id/content_textview"
              android:layout_below="@id/content_hint"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:scrollbars="vertical"
              android:layout_above="@+id/check_soundbar_version_upgrade"/>

        <LinearLayout
            android:id="@id/check_soundbar_version_upgrade"
            android:layout_width="fill_parent"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/update_progress"
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:indeterminate="false"
                    android:max="100"
                    android:textAlignment="center"
                    style="?android:attr/progressBarStyleHorizontal"/>

              <Button
                  android:id="@+id/button_upgrade"
                  android:layout_width="fill_parent"
                  android:layout_height="48dp"
                  android:text="@string/button_version_upgrade"/>
        </LinearLayout>


    </RelativeLayout>

</FrameLayout>
